--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^12.4.10
   provider: ^6.1.5
   url_launcher: ^6.3.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/9636542.webp
+    - assets/Facts about Alcohol.png
+    - assets/images.jpg
+    - assets/Director, Dimhans.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
