Improve About Screen: Add team member grid with square images and compact layout
- Convert circular images to square format with rounded corners
- Create 3-column grid layout for better space utilization
- Make images fill entire grid space with text overlay
- Add gradient overlay for better text readability
- Include all team member images in pubspec.yaml
- Improve visual design with modern card layout
- Reduce spacing and padding for compact appearance

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,12 @@ flutter:
     - assets/images.jpg
     - assets/Director, Dimhans.jpg
     - assets/logo.png
+    - assets/MrShivaganesh B Gunjal.jpg
+    - assets/AshokSKori.jpg
+    - assets/Srinivas Kosagi.jpg
+    - assets/MrRamappa Timmapur.jpg
+    - assets/DrShivarudrappa Bhairppanavar.jpg
+    - assets/DrSusheelkumar Ronad.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
